--- a/Geisler1984.ipynb
+++ b/Geisler1984.ipynb
@@ -657,7 +657,7 @@
    "source": [
     "#### Generate figure 4\n",
     "\n",
-    "If $L_{\\alpha}$ is the luminance of stimulus $\\alpha$ and $L_{\\beta}$ is the luminance of stimulus $\\beta$, then the $N$ referred to in figure 4 (\"mean number of quanta per stimulus\") is a monotonic transformation of $\\frac{L_{\\alpha}"
+    "Figure 4 is annoying to generate. Basically, we should start right from"
    ]
   },
   {
